[package]
name = "fusion_mouse"
version = "0.1.0"
authors = ["Tristan Hume <tristan@thume.ca>"]

[dependencies]
linuxtrack-sys = "1.0.1"
cgmath = "0.15"
enigo = {git="https://github.com/trishume/enigo"}
tobii-sys = "0.1.0"
signpost = {git="https://github.com/pcwalton/signpost"}

glium = "0.19.0"
cocoa = "0.11.0"
objc = "0.2.2"
