[package]
name = "fusion_mouse"
version = "0.1.0"
authors = ["Tristan Hume <tristan@thume.ca>"]

[dependencies]
linuxtrack-sys = "1.0.1"
cgmath = "0.15"
enigo = {git="https://github.com/trishume/enigo"}
tobii-sys = {path="../tobii-sys"}
signpost = {git="https://github.com/pcwalton/signpost"}
kiss3d = "0.11"
nalgebra = "0.13"
