[package]
name = "fusion_mouse"
version = "0.1.0"
authors = ["Tristan Hume <tristan@thume.ca>"]

[dependencies]
linuxtrack-sys = "1.0.1"
cgmath = "0.15"
enigo = {git="https://github.com/trishume/enigo"}
tobii-sys = { version = "0.2.0", optional = true }
signpost = {git="https://github.com/pcwalton/signpost"}

glium = { version = "0.19.0", optional = true }
cocoa = { version = "0.11.0", optional = true }
objc = { version = "0.2.2", optional = true }

[features]

viz-2d = ["glium","cocoa", "objc"]
tobii = ["tobii-sys"]
